--- a/src/app/components/Hero/Hero.module.css
+++ b/src/app/components/Hero/Hero.module.css
@@ -1,6 +1,6 @@
 .heroImage {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("../../../../public/ballerina.jpg");
+    url("/images/ballerina.jpg");
   height: 40vw;
   background-position: center;
   background-repeat: no-repeat;
@@ -10,7 +10,7 @@
 
 .heroText {
   text-align: right;
-  padding: 7%;
+  padding: 10%;
   color: white;
 }
 
