--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Great Vibes";
-  src: url("../../public/fonts/GreatVibes-Regular.ttf");
+  src: url("/fonts/GreatVibes-Regular.ttf");
   font-weight: normal;
   font-style: normal;
 }
