--- a/src/app/components/Navbar/Navbar.module.css
+++ b/src/app/components/Navbar/Navbar.module.css
@@ -7,19 +7,33 @@
   padding: 0.7% 10%;
   justify-content: space-between;
   align-items: center;
+  -webkit-box-shadow: 0px 6px 44px -15px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 0px 6px 44px -15px rgba(0, 0, 0, 0.6);
+  box-shadow: 0px 6px 44px -15px rgba(0, 0, 0, 0.6);
 }
 
 .colorNavbar {
-  background-color: #c4267c;
+  background-color: #ffffff;
 }
 .transparentNavbar {
   background: transparent;
 }
 
 .links {
-  color: #f2f2f2;
+  font-size: 18px;
+}
+.linksSpace {
+  padding-right: 40px;
+}
+
+.linksWhite {
+  color: #ffffff;
+}
+
+.linksPink {
+  color: var(--pink);
 }
 
 .logo {
-  width: 3%;
+  width: 10%;
 }
