--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -22,8 +22,24 @@
   flex-direction: column;
 }
 
+.divFlex {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
 .sectionSpace {
   padding: 5% 10%;
+}
+
+.title {
+  font-weight: 100;
+  color: #25020f;
+}
+
+.subtitle {
+  font-weight: 100;
+  color: #8f8f8f;
 }
 
 /* Enable hover only on non-touch devices */
