--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,8 @@
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-  --pink: #c4267c;
+  --pink: #b62977;
+  --lighter-pink: #e23494;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -48,6 +49,28 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+*::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+*::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.1);
+}
+
+*::-webkit-scrollbar-thumb {
+  background: var(--pink);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--lighter-pink);
+}
+
+::-webkit-scrollbar-thumb:active {
+  background: var(--lighter-pink);
 }
 
 html,
